--- a/spec.yaml
+++ b/spec.yaml
@@ -62,6 +62,9 @@ paths:
 definitions:
   resources1:
     type: object
+    required:
+    - schema
+    - resources
     properties:
       schema:
         type: string
@@ -69,6 +72,9 @@ definitions:
         type: array
         items:
           type: object
+          required:
+          - url
+          - methods
           properties:
             url:
               type: string
@@ -78,6 +84,10 @@ definitions:
                 type: string
   api_error1:
     type: object
+    required:
+    - schema
+    - code
+    - message
     properties:
       schema:
         type: string
@@ -88,6 +98,13 @@ definitions:
         type: string
   tweet1:
     type: object
+    required:
+    - schema
+    - tweet_id
+    - user
+    - name
+    - body
+    - timestamp
     properties:
       schema:
         type: string
@@ -105,6 +122,9 @@ definitions:
         format: sqlite3 DATETIME
   tweets1:
     type: object
+    required:
+    - schema
+    - tweets
     properties:
       schema:
         type: string
